# Stundenplan.io

./: .env  .eslintignore  .eslintrc.cjs  .gitignore  README.md  package-lock.json  package.json  svelte.config.js  test.json
.github/: CODEOWNERS
StundenplanBackEnd/: .gitignore  Cargo.toml  schema.sql
StundenplanBackEnd/Migrations/: AddLessonToggleFieldsToMetaInfo_1714211005.sql
StundenplanBackEnd/Styles/: Dark.json  Light.json  Pink.json
StundenplanBackEnd/src/: api_routes.rs  auth.rs  main.rs  migrations.rs  static_routes.rs
StundenplanBackEnd/templates/: userSignIn.html  userSignOut.html  userSignUp.html
StundenplanBackEnd/templates/frontend/: index.html
StundenplanBackEnd/templates/frontend/_app/: version.json
StundenplanBackEnd/templates/frontend/_app/immutable/assets/: 2.2b650f2d.css  2.4cc130ca.css  2.713e9542.css  2.7a0ea3db.css  2.950e6fb5.css  2.a8f8d1e9.css  2.c035f330.css  _page.48c2964e.css  _page.a78b1951.css  _page.c3d7f1e6.css  _page.f525ff7d.css  _page.fb2f2e40.css
StundenplanBackEnd/templates/frontend/_app/immutable/chunks/: index.746fd2e9.js  index.c617b70a.js  scheduler.730cd8de.js  singletons.1224cfda.js  singletons.189eb84c.js  singletons.20993a22.js  singletons.215a5533.js  singletons.30152932.js  singletons.6328a077.js  singletons.66a46f1e.js  singletons.7e3d4e38.js  singletons.8b5938da.js  singletons.8ff41839.js  singletons.96d38a8d.js  singletons.9c1154e6.js  singletons.a41dc7b7.js  singletons.b2343dc8.js  singletons.b7e3ed41.js  singletons.ba7ca106.js  singletons.c80be375.js  singletons.cf249863.js
src/: app.html  (+1 more)
(+124 files in other folders)
